--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,5 @@ rand = "0.8.5"
 serde = {version = "1.0.192", features = ["derive"]}
 serde_json = "1.0.108"
 rayon = "1.8.0"
+reqwest = {version = "0.11.22", features = ["blocking", "json"]}
+csv = "1.3.0"
