--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,8 @@ serde_json = "1.0.108"
 rayon = "1.8.0"
 reqwest = {version = "0.11.22", features = ["blocking", "json"]}
 csv = "1.3.0"
+indexmap = "2.1.0"
+regex = "1.10.2"
+pest = "2.7.5"
+pest_derive = "2.7.5"
+lazy_static = "1.4.0"
