Switched from sysinfo to perf-monitor

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,5 +22,5 @@ regex = "1.10.2"
 pest = "2.7.5"
 pest_derive = "2.7.5"
 lazy_static = "1.4.0"
-sysinfo = "0.29.11"
 tokio = "1.35.0"
+perf_monitor = "0.2.0"
